--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -15,3 +15,34 @@ Coupon:
   AntiBrushLimit: 3         # 防刷：单用户/设备1分钟最多领取3次
   AntiBrushExpire: 60       # 防刷过期时间 秒
   AesKey: "1234567890123456" # AES加密密钥
+
+Audit:
+  Decision:
+    ModelEnabled: true
+    DefaultReviewThreshold: 0.6
+    RejectGap: 0.15
+    FeatureKeys: ["order_amount", "is_vip", "apply_times", "risk_level"]
+  Model:
+    Enabled: true
+    Bias: -0.2
+    Weights:
+      order_amount: 0.002
+      is_vip: -0.6
+      apply_times: 0.3
+      risk_level: 0.8
+  Threshold:
+    WindowSize: 200
+    Percentile: 0.9
+    Min: 0.4
+    Max: 0.9
+    Default: 0.6
+  Metrics:
+    WindowSeconds: 60
+  Alert:
+    Enabled: true
+    IntervalSeconds: 30
+    MaxLatencyMs: 200
+    MinAccuracy: 0.85
+    MinThroughput: 0.5
+    WebhookURL: ""
+
